pca is now in the pipeline. individual npy files created to match each word file. Ready to be fed in clustering algorithms and for distance measures to be calculated.

--- a/IAM_TASK_3/TODO.txt
+++ b/IAM_TASK_3/TODO.txt
@@ -22,4 +22,5 @@ Total:  caught:
 65 - 63: 4% error
 AVG: 4.1% error
 
-To inform on the lower bound of classes - number of classes needs to be above the error rate by at least a margin that fixes that error: if 10% error rate, then need 100 for the class. The absolute error is the difference between the state of nature, in this case full sentence labels and the word segmentation labels. The absolute error is then taken as a percentage of the total amount of data points per class caught in the full sentence labels. Below 10 data points per class, we take the error to be 0. This is further substantiated by manually checking random samples of the segmented words and the automatically associated label. This means that all classes are free to be used in the analysis.
+To inform on the lower bound of classes - number of classes needs to be above the error rate by at least a margin that fixes that error: if 10% error rate, then need 100 for the class. The absolute error is the difference between the state of nature, in this case full sentence labels and the word segmentation labels. The absolute error is then taken as a percentage of the total amount of data points per class caught in the full sentence labels. Below 10 data points per class, we take the error to be 0. This is further substantiated by manually checking random samples of the segmented words and the automatically associated label.
+
